OPT-7349: Schema creation (#8938)
* feat(schema): Creating the opensearch schema
#relates to OPT-7349

* feat(schema): Implementing findings from review
#relates to OPT-7349

* feat(schema): Second run of implementing issues from review
#relates to OPT-7349

* feat(schema): Final run of implementation from issues from review
#relates to OPT-7349

* feat(schema): Implementing findings from review
#relates to OPT-7349

* feat(schema): Implementing more findings from review
#relates to OPT-7349

* feat(schema): Implementing final round of review comments
#relates to OPT-7349

* feat(schema): Fixing errors after rebasing
#relates to OPT-7349